fix text alignment

--- a/styling.css
+++ b/styling.css
@@ -26,6 +26,7 @@ img {
     border-radius: 10px;
 }
 .text {
+    text-align: center;
     margin: 15px;
 }
 h1 {
